--- a/bookSystem/book_system.html
+++ b/bookSystem/book_system.html
@@ -19,6 +19,7 @@
     <div id="books">
         <!-- books will be displayed here -->
     </div>
+    <button onclick="deleteBook()">Delete</button>
     <script src="./book_system.js"></script>
 </body>
 </html>
